Fix bug on about section overflowing div

--- a/app/assets/stylesheets/about.css.scss
+++ b/app/assets/stylesheets/about.css.scss
@@ -25,9 +25,7 @@
 .about-text {
   clear:both; 
 }
-.skill-box {
 
-}
 .skill {
   margin-top: 20px;
 }
